--- a/src/app/features/login/login.component.css
+++ b/src/app/features/login/login.component.css
@@ -102,7 +102,7 @@
   text-decoration: none;
   font-size: 13px;
   text-align: left;
-  width: 100%; /* Garante que ocupe a largura para o text-align funcionar */
+  width: 100%; 
 }
 .form-actions {
   display: flex;
