--- a/src/app/features/despesas/despesas.component.html
+++ b/src/app/features/despesas/despesas.component.html
@@ -24,7 +24,7 @@
   </section>
 
   <p class="error" *ngIf="error">{{ error }}</p>
-  <p class="success" *ngIf="success">{{ success }}</p>
+  <p-toast position="top-right"></p-toast>
 
   <div class="grid two">
     <section class="card form-card">
