--- a/src/app/features/receitas/receitas.component.html
+++ b/src/app/features/receitas/receitas.component.html
@@ -107,8 +107,8 @@
             </td>
             <td>{{ item.observacoes }}</td>
             <td class="actions">
-              <button pButton type="button" label="Editar" (click)="edit(item)"></button>
-              <button pButton type="button" severity="danger" label="Excluir" (click)="remove(item)"></button>
+              <button pButton type="button" label="Editar" [style.width.px]="110" (click)="edit(item)"></button>
+              <button pButton type="button" severity="danger" label="Excluir" [style.width.px]="110" (click)="remove(item)"></button>
             </td>
           </tr>
         </ng-template>
